修改股票账套选择 Signed-off-by: gaozhen <gaozhen3h@163.com>

--- a/src/main/resources/static/common/TZtxx.html
+++ b/src/main/resources/static/common/TZtxx.html
@@ -14,8 +14,8 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="format-detection" content="telephone=no">-->
-    <link rel="stylesheet" href="../../../layui/css/layui.css" media="all" />
-    <link rel="stylesheet" href="../../../css/public.css" media="all" />
+    <link rel="stylesheet" href="../layui/css/layui.css" media="all" />
+    <link rel="stylesheet" href="../css/public.css" media="all" />
 </head>
 <body class="childrenBody">
 <form class="layui-form">
@@ -35,10 +35,10 @@
         <a class="layui-btn layui-btn-xs" lay-event="checked">选择</a>
     </script>
 </form>
-<script type="text/javascript" src="../../../js/jquery-1.11.1.js"></script>
-<script type="text/javascript" src="../../../js/jquery.cookie.js"></script>
-<script type="text/javascript" src="../../../layui/layui.js"></script>
-<script type="text/javascript" src="TZtxxList_Gp.js"></script>
+<script type="text/javascript" src="../js/jquery-1.11.1.js"></script>
+<script type="text/javascript" src="../js/jquery.cookie.js"></script>
+<script type="text/javascript" src="../layui/layui.js"></script>
+<script type="text/javascript" src="TZtxx.js"></script>
 <script>
 </script>
 </body>
